# aisuite

./: .env.sample  .gitignore  CONTRIBUTING.md  README.md  aimodels.ipynb  pyproject.toml
.github/workflows/: run_pytest.yml
aimodels/client/: __init__.py  chat.py  client.py  completions.py  multi_fm_client.py
aimodels/framework/: __init__.py  chat_completion_response.py  message.py
aimodels/providers/: __init__.py  anthropic_interface.py  aws_bedrock_interface.py  fireworks_interface.py  google_interface.py  groq_interface.py  mistral_interface.py  octo_interface.py  ollama_interface.py  openai_interface.py  replicate_interface.py  together_interface.py  vertex_interface.py
aisuite/: __init__.py  client.py  provider.py
aisuite/client/: __init__.py  chat.py
aisuite/framework/: choice.py
aisuite/providers/: __init__.py  anthropic_http_provider.py  anthropic_interface.py  anthropic_provider.py  aws_bedrock_provider.py  aws_provider.py  azure_provider.py  fireworks_interface.py  gcp_provider.py  google_http_provider.py  google_interface.py  google_provider.py  groq_provider.py  huggingface_provider.py  mistral_interface.py  ollama_interface.py  openai_http_provider.py  openai_interface.py  openai_provider.py  replicate_interface.py
examples/: RAG.ipynb  client.ipynb  llm_reasoning.ipynb  multi_fm_client.ipynb  test_anthropic.ipynb
guides/: README.md  anthropic.md  aws.md  aws_bedrock.md  azure.md  google.md  huggingface.md  openai.md  vertex.md
tests/client/: test_client.py  test_multi_fm_client.py
tests/providers/: test_anthropic_interface.py  test_fireworks_interface.py  test_google_interface.py  test_google_provider.py  test_groq_interface.py  test_mistral_interface.py  test_ollama_interface.py  test_openai_interface.py  test_replicate_interface.py  test_vertex_interface.py
