[tool.poetry]
name = "aimodels"
version = "0.1.0"
description = ""
authors = ["Andrew Ng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.7"
groq = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
